ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hariprasad-app-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx            # requires nginx ingress controller
  rules:
  - host: hariprasad.yourdomain.com  # your domain or EC2 public IP
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hariprasad-app-svc
            port:
              number: 80
